--- a/web/css/style.css
+++ b/web/css/style.css
@@ -488,7 +488,7 @@ button {
 /** banner section **/
 
 .full_bg {
-     background: url(../images/banner.png);
+     background: url(../images/form6.jpg);
      background-size: cover;
      background-position: center;
      background-repeat: no-repeat;
